e2e/tests/snapshots/snm_test__test_snm_install_set_default_npm_with_node_20.snap
---
source: e2e/tests/snm_test.rs
expression: res
---
name: "test_snm_install_set_default_npm_with_node_20"

id: 1
is: snm node install 20.0.0


stdout:🎉 Node v20.0.0 is installed
stderr:


id: 2
is: snm node default 20.0.0


stdout:🎉 Node v20.0.0 is now default
stderr:


id: 3
is: npm -v


stdout:9.6.4
stderr:


id: 4
is: snm npm install 9.0.0


stdout:🎉 npm v9.0.0 is installed
stderr:


id: 5
is: snm npm default 9.0.0


stdout:🎉 npm v9.0.0 is now default
stderr:


id: 6
is: npm -v


stdout:9.0.0
stderr:
