e2e/tests/snapshots/snm_test__test_snm_install_set_default_yarn.snap
---
source: e2e/tests/snm_test.rs
expression: res
snapshot_kind: text
---
id: 1
is: snm node install 20.0.0

🎉 Node v20.0.0 is installed

id: 2
is: snm node default 20.0.0

🎉 Node v20.0.0 is now default

id: 3
is: yarn -v

Error: Can't find command yarn

id: 4
is: snm yarn install 1.22.22

🎉 yarn v1.22.22 is installed

id: 5
is: snm yarn default 1.22.22

🎉 yarn v1.22.22 is now default

id: 6
is: yarn -v

1.22.22
