e2e/tests/snapshots/snm_test__test_snm_install_set_default_yarn4.snap
---
source: e2e/tests/snm_test.rs
expression: res
---
name: "test_snm_install_set_default_yarn4"

id: 1
is: snm node install 20.0.0


stdout:🎉 Node v20.0.0 is installed
stderr:


id: 2
is: snm node default 20.0.0


stdout:🎉 Node v20.0.0 is now default
stderr:


id: 3
is: yarn -v


stdout:
stderr:Error: Can't find command yarn


id: 4
is: snm yarn install 4.0.0


stdout:🎉 yarn v4.0.0 is installed
stderr:


id: 5
is: snm yarn default 4.0.0


stdout:🎉 yarn v4.0.0 is now default
stderr:


id: 6
is: yarn -v


stdout:4.0.0
stderr:
