e2e/tests/snapshots/snm_test__test_snm_install_with_outside_npm.snap
---
source: e2e/tests/snm_test.rs
expression: res
snapshot_kind: text
---
id: 1
is: snm node install 20.0.0

🎉 Node v20.0.0 is installed

id: 2
is: snm node default 20.0.0

🎉 Node v20.0.0 is now default

id: 3
is: npm -v

9.6.4

id: 4
is: snm npm install 9.0.0

🎉 npm v9.0.0 is installed

id: 5
is: snm npm default 9.0.0

🎉 npm v9.0.0 is now default

id: 6
is: npm -v

9.0.0

id: 7
is: node index.cjs

18.3.1
