e2e/tests/snapshots/snm_test__test_snm_set_default_node.snap
---
source: e2e/tests/snm_test.rs
expression: res
snapshot_kind: text
---
id: 1
is: snm node install 20.0.0

🎉 Node v20.0.0 is installed

id: 2
is: snm node default 20.0.0

🎉 Node v20.0.0 is now default

id: 3
is: node -v

v20.0.0
